# streaming-pbo

./: .env.example  .gitignore  ANTI_GARBAGE_CHECKLIST.md  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  pr-checklist-gate.yml
examples/: live_audit.py
src/streaming_pbo/: __init__.py  consensus.py  dsr.py  pbo.py
tests/: test_consensus.py  test_dsr.py  test_pbo.py
