[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streaming-pbo"
version = "0.1.0"
description = "Online Probability of Backtest Overfitting: streaming CPCV with O(log n) Fenwick rank queries and regime-aware overfitting bounds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ali Pourrahim", email = "Alipourrahim.ap@gmail.com" }]
keywords = ["finance", "quantitative", "backtest", "overfitting", "conformal", "streaming"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/streaming_pbo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
